--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,28 @@
     <color name="btnSignIn">#4a86ff</color>
     <color name="btnLogIn">#fff</color>
     <color name="btnDeclinePickup">#ba0000</color>
+    <color name="purple_200">#FFBB86FC</color>
+    <color name="purple_500">#1155C8</color>
+    <color name="purple_700">#FF3700B3</color>
+    <color name="teal_200">#FF03DAC5</color>
+    <color name="teal_700">#FF018786</color>
+    <color name="black">#FF000000</color>
+    <color name="white">#FFFFFFFF</color>
+
+
+    <color name="dark_gray">#8E8F8F</color>
+
+    <color name="offwhite">#BCB8B5</color>
+    <color name="green">#42FF00</color>
+
+
+    <color name="skycolor">#448AFF</color>
+
+    <color name="lightgray">#03528B</color>
+    <color name="red">#F50057</color>
+
+    <color name="hint_color">#5C03528B</color>
+    <color name="yellow">#FFC400</color>
+
+    <color name="ed_color">#9403528B</color>
 </resources>
