--- a/app/src/main/res/layout/item_layout_detail_rider.xml
+++ b/app/src/main/res/layout/item_layout_detail_rider.xml
@@ -101,9 +101,8 @@
 
         </RelativeLayout>
 
-
-
         <Switch
+            android:visibility="visible"
             android:layout_column="5"
             android:gravity="center"
             android:layout_weight="3"
@@ -118,6 +117,21 @@
             android:thumbTint="@color/lightgray"
             android:trackTint="@color/offwhite"
             android:textOn="Apr"
+            tools:ignore="UseSwitchCompatOrMaterialXml" />
+        <TextView
+            android:layout_column="5"
+            android:gravity="center"
+            android:layout_weight="3"
+            android:id="@+id/stts"
+            android:visibility="gone"
+
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:textColor="@color/lightgray"
+            android:textSize="12sp"
+            android:checked="false"
+            android:text="Blocked"
+            android:thumbTint="@color/lightgray"
             tools:ignore="UseSwitchCompatOrMaterialXml" />
 
     </TableRow>
