--- a/app/src/main/res/layout/item_layout_detail_rider.xml
+++ b/app/src/main/res/layout/item_layout_detail_rider.xml
@@ -4,18 +4,22 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_marginBottom="5dp"
+    android:layout_height="50dp"
+    android:layout_marginBottom="10dp"
     >
 
 
-    <TableRow>
+    <TableRow
+
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:ignore="UselessParent">
 
         <de.hdodenhof.circleimageview.CircleImageView
             android:layout_width="0dp"
 
             android:id="@+id/pic_img"
-            android:layout_height="match_parent"
+            android:layout_height="50dp"
             android:background="@android:color/transparent"
             android:src="@drawable/ic_launcher_foreground"
             app:civ_border_width="1dp"
@@ -108,7 +112,7 @@
             android:layout_weight="3"
             android:id="@+id/approved"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:textOff="Pen"
             android:textColor="@color/lightgray"
             android:textSize="10sp"
@@ -124,9 +128,9 @@
             android:layout_weight="3"
             android:id="@+id/stts"
             android:visibility="gone"
-
+            android:textStyle="bold"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:textColor="@color/lightgray"
             android:textSize="12sp"
             android:checked="false"
