--- a/app/src/main/res/drawable-v24/backbgred.xml
+++ b/app/src/main/res/drawable-v24/backbgred.xml
@@ -4,7 +4,7 @@
 
     <solid
 
-android:color="@color/red"
+android:color="@android:color/holo_red_light"
         />
 <corners
     android:radius="100dp"/>
