--- a/app/src/main/res/layout/layout_login.xml
+++ b/app/src/main/res/layout/layout_login.xml
@@ -10,7 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <com.rengwuxian.materialedittext.MaterialEditText
-            android:id="@+id/etEmail"
+            android:id="@+id/etName"
             android:hint="@string/email"
             android:inputType="textEmailAddress"
             android:textColor="@color/Black"
