--- a/app/src/main/res/layout/activity_discount.xml
+++ b/app/src/main/res/layout/activity_discount.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<LinearLayout
+<androidx.core.widget.NestedScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -9,6 +9,11 @@
     android:id="@+id/bg"
     android:weightSum="4"
     android:background="@drawable/bg_signup">
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
+  >
 
 
     <TextView
@@ -365,23 +370,39 @@
             </LinearLayout>
 
 
-
-                <TextView
-                    android:layout_width="match_parent"
+ <RelativeLayout
+     android:layout_width="match_parent"
+     android:layout_height="wrap_content">
+            <TextView
+                android:layout_alignParentStart="true"
+                    android:layout_width="150dp"
                     android:clickable="true"
                     android:layout_marginTop="10dp"
                     android:layout_height="45dp"
-                    android:layout_marginBottom="5dp"
-                    android:layout_marginHorizontal="80dp"
                     android:gravity="center"
-                    android:id="@+id/add"
+                    android:id="@+id/sendtoall"
                     android:background="@drawable/background_card_view"
                     android:textColor="@color/white"
-                    android:text="Add"
+                    android:text="Send to All"
                     android:textStyle="bold"
-                    android:textSize="20sp"/>
+                    android:textSize="17sp"
+                android:focusable="true" />
+     <TextView
+         android:layout_alignParentEnd="true"
+         android:layout_width="150dp"
+         android:clickable="true"
+         android:layout_marginTop="10dp"
+         android:layout_height="45dp"
+         android:gravity="center"
+         android:id="@+id/senttospecfic"
+         android:background="@drawable/background_card_view"
+         android:textColor="@color/white"
+         android:text="Selected users"
+         android:textStyle="bold"
+         android:textSize="17sp"
+         android:focusable="true" />
 
-
+ </RelativeLayout>
 
             <TextView
                 android:background="@drawable/background_card_view"
@@ -405,6 +426,7 @@
 
 <LinearLayout
     android:orientation="vertical"
+    android:minHeight="600dp"
     android:layout_width="match_parent"
     android:id="@+id/layoutrec"
     android:visibility="gone"
@@ -436,3 +458,4 @@
         android:textSize="20sp"/>
 </LinearLayout>
 </LinearLayout>
+</androidx.core.widget.NestedScrollView>
