--- a/app/src/main/res/layout/activity_drawer_home.xml
+++ b/app/src/main/res/layout/activity_drawer_home.xml
@@ -10,6 +10,211 @@
 
     >
 
+
+    /////
+
+
+<!--    <LinearLayout-->
+<!--        android:layout_marginTop="20dp"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:gravity="center"-->
+<!--        android:layout_height="120dp"-->
+<!--        android:orientation="horizontal"-->
+<!--        android:weightSum="3">-->
+
+<!--        <FrameLayout-->
+<!--            android:layout_width="0dp"-->
+<!--            android:layout_height="match_parent"-->
+<!--            android:layout_weight="1"-->
+<!--            android:gravity="center"-->
+<!--            >-->
+
+
+<!--            <com.budiyev.android.circularprogressbar.CircularProgressBar-->
+<!--                android:id="@+id/prgblock"-->
+<!--                android:layout_width="90dp"-->
+<!--                android:layout_height="90dp"-->
+<!--                app:animateProgress="true"-->
+<!--                app:backgroundStrokeColor="#ff3f51b5"-->
+<!--                app:backgroundStrokeWidth="2dp"-->
+<!--                app:drawBackgroundStroke="false"-->
+<!--                app:foregroundStrokeCap="butt"-->
+<!--                android:layout_gravity="center"-->
+<!--                app:foregroundStrokeColor="@color/red"-->
+<!--                app:foregroundStrokeWidth="8dp"-->
+<!--                app:indeterminate="false"-->
+<!--                app:indeterminateRotationAnimationDuration="1200"-->
+<!--                app:indeterminateSweepAnimationDuration="600"-->
+<!--                app:indeterminateMinimumAngle="45"-->
+<!--                app:maximum="100"-->
+<!--                app:progress="50"-->
+<!--                app:progressAnimationDuration="100"-->
+<!--                app:startAngle="270"/>-->
+
+<!--            <LinearLayout-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_gravity="center"-->
+<!--                android:orientation="vertical">-->
+
+
+
+<!--                <TextView-->
+<!--                    android:layout_width="wrap_content"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:text="87%"-->
+<!--                    android:id="@+id/blockedper"-->
+<!--                    android:textColor="@color/black"-->
+<!--                    android:textStyle="bold"-->
+<!--                    android:textSize="14sp"-->
+<!--                    android:layout_gravity="center"/>-->
+
+
+<!--                <TextView-->
+<!--                    android:layout_width="wrap_content"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:text="Blocked"-->
+<!--                    android:textSize="8sp"-->
+
+<!--                    android:gravity="center"-->
+<!--                    android:textColor="@color/black"-->
+<!--                    android:layout_gravity="center"/>-->
+
+
+<!--            </LinearLayout>-->
+
+
+<!--        </FrameLayout>-->
+<!--        <FrameLayout-->
+<!--            android:layout_width="0dp"-->
+<!--            android:layout_height="match_parent"-->
+<!--            android:layout_weight="1"-->
+<!--            android:gravity="center"-->
+<!--            >-->
+
+
+<!--            <com.budiyev.android.circularprogressbar.CircularProgressBar-->
+<!--                android:id="@+id/prgonline"-->
+<!--                android:layout_width="90dp"-->
+<!--                android:layout_height="90dp"-->
+<!--                app:animateProgress="true"-->
+<!--                app:backgroundStrokeColor="#ff3f51b5"-->
+<!--                app:backgroundStrokeWidth="2dp"-->
+<!--                app:drawBackgroundStroke="false"-->
+<!--                app:foregroundStrokeCap="butt"-->
+<!--                android:layout_gravity="center"-->
+<!--                app:foregroundStrokeColor="@color/lightgray"-->
+<!--                app:foregroundStrokeWidth="8dp"-->
+<!--                app:indeterminate="false"-->
+<!--                app:indeterminateRotationAnimationDuration="1200"-->
+<!--                app:indeterminateSweepAnimationDuration="600"-->
+<!--                app:indeterminateMinimumAngle="45"-->
+<!--                app:maximum="100"-->
+<!--                app:progress="50"-->
+<!--                app:progressAnimationDuration="100"-->
+<!--                app:startAngle="270"/>-->
+
+<!--            <LinearLayout-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_gravity="center"-->
+<!--                android:orientation="vertical">-->
+
+
+
+<!--                <TextView-->
+<!--                    android:id="@+id/onlineper"-->
+<!--                    android:layout_width="wrap_content"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:text="87%"-->
+<!--                    android:textColor="@color/black"-->
+<!--                    android:textStyle="bold"-->
+<!--                    android:textSize="14sp"-->
+<!--                    android:layout_gravity="center"/>-->
+
+
+<!--                <TextView-->
+<!--                    android:layout_width="wrap_content"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:text="Verified"-->
+<!--                    android:gravity="center"-->
+<!--                    android:textSize="8sp"-->
+<!--                    android:textColor="@color/black"-->
+<!--                    android:layout_gravity="center"/>-->
+
+
+<!--            </LinearLayout>-->
+
+
+<!--        </FrameLayout>-->
+<!--        <FrameLayout-->
+<!--            android:layout_width="0dp"-->
+<!--            android:layout_height="match_parent"-->
+<!--            android:layout_weight="1"-->
+<!--            android:gravity="center"-->
+<!--            >-->
+
+
+<!--            <com.budiyev.android.circularprogressbar.CircularProgressBar-->
+<!--                android:id="@+id/prgoffline"-->
+<!--                android:layout_width="90dp"-->
+<!--                android:layout_height="90dp"-->
+<!--                app:animateProgress="true"-->
+<!--                app:backgroundStrokeColor="#ff3f51b5"-->
+<!--                app:backgroundStrokeWidth="2dp"-->
+<!--                app:drawBackgroundStroke="false"-->
+<!--                app:foregroundStrokeCap="butt"-->
+<!--                android:layout_gravity="center"-->
+<!--                app:foregroundStrokeColor="@color/offwhite"-->
+<!--                app:foregroundStrokeWidth="8dp"-->
+<!--                app:indeterminate="false"-->
+<!--                app:indeterminateRotationAnimationDuration="1200"-->
+<!--                app:indeterminateSweepAnimationDuration="600"-->
+<!--                app:indeterminateMinimumAngle="45"-->
+<!--                app:maximum="100"-->
+<!--                app:progress="50"-->
+<!--                app:progressAnimationDuration="100"-->
+<!--                app:startAngle="270"/>-->
+
+<!--            <LinearLayout-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:minWidth="40dp"-->
+<!--                android:layout_gravity="center"-->
+<!--                android:orientation="vertical">-->
+
+
+
+<!--                <TextView-->
+<!--                    android:id="@+id/offlineper"-->
+<!--                    android:layout_width="wrap_content"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:text="87%"-->
+<!--                    android:textColor="@color/black"-->
+<!--                    android:textSize="14sp"-->
+<!--                    android:textStyle="bold"-->
+<!--                    android:layout_gravity="center"/>-->
+
+
+<!--                <TextView-->
+<!--                    android:layout_width="match_parent"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:layout_gravity="center"-->
+<!--                    android:gravity="center"-->
+<!--                    android:text="Unverified"-->
+<!--                    android:textColor="@color/black"-->
+<!--                    android:textSize="8sp" />-->
+
+
+<!--            </LinearLayout>-->
+
+
+<!--        </FrameLayout>-->
+
+
+<!--    </LinearLayout>-->
+    ////
+
     <include
         layout="@layout/activity_home"
         android:layout_width="match_parent"
