--- a/app/src/main/res/layout/activity_driver_detail.xml
+++ b/app/src/main/res/layout/activity_driver_detail.xml
@@ -76,7 +76,7 @@
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="130dp"
+            android:layout_height="wrap_content"
             android:padding="5dp"
             android:background="@drawable/backbg2"
             android:layout_marginVertical="10dp">
@@ -295,7 +295,7 @@
 <LinearLayout
     android:id="@+id/v1"
     android:layout_width="match_parent"
-    android:layout_height="120dp"
+    android:layout_height="160dp"
     android:layout_below="@id/doc_info"
     android:layout_marginTop="10dp"
     android:orientation="horizontal"
@@ -322,7 +322,7 @@
                         <ImageView
                             android:id="@+id/cnic_pic"
                             android:layout_width="match_parent"
-                            android:layout_height="120dp"
+                            android:layout_height="match_parent"
                              android:layout_marginVertical="8dp"
                          android:onClick="onClickPIC"
                             android:layout_below="@id/Cnic_pic_txt"/>
@@ -351,7 +351,7 @@
                     android:id="@+id/Licence_pic_img"
                     android:layout_width="match_parent"
                     android:onClick="onClickPIC"
-                    android:layout_height="120dp"
+                    android:layout_height="match_parent"
                     android:layout_marginVertical="10dp"
                     android:layout_below="@id/Licence_pic"/>
 
@@ -361,7 +361,7 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="120dp"
+                android:layout_height="160dp"
                 android:layout_below="@id/v1"
                 android:layout_marginTop="10dp"
                 android:orientation="horizontal"
@@ -390,7 +390,7 @@
 
                             android:id="@+id/Vehicle_pic_img"
                             android:layout_width="match_parent"
-                            android:layout_height="120dp"
+                            android:layout_height="match_parent"
                              android:layout_marginVertical="10dp"
                             android:layout_below="@id/Vehicle_pic"/>
             </LinearLayout>
