--- a/app/src/main/res/layout/drivers_details_activity.xml
+++ b/app/src/main/res/layout/drivers_details_activity.xml
@@ -9,75 +9,10 @@
     android:background="@color/lightgray"
     android:orientation="vertical" >
 
-    <com.google.android.material.appbar.AppBarLayout
-        android:id="@+id/x"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="0.6"
-        tools:ignore="MissingConstraints">
-
-        <androidx.appcompat.widget.Toolbar
-            android:id="@+id/tool"
-            android:background="@color/lightgray"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-
-            <RelativeLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
-
-                <ImageView
-                    android:id="@+id/backpress"
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
-                    android:background="@drawable/backbg"
-                    android:src="@drawable/ic_baseline_arrow_back_24"/>
-            </RelativeLayout>
-
-
-
-
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center">
-
-                <Button
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="90dp"
-                    android:backgroundTint="@color/white"
-                    android:text="LoadEase"
-                    android:textColor="@color/lightgray"
-                    android:gravity="center"
-
-                    />
-
-
-                <de.hdodenhof.circleimageview.CircleImageView
-                    android:id="@+id/profile_image"
-                    android:layout_width="70dp"
-                    android:padding="5dp"
-                    android:layout_marginRight="10sp"
-                    android:layout_height="match_parent"
-                    android:background="@android:color/transparent"
-                    android:src="@drawable/ic_baseline_person_24"
-                    app:civ_border_width="2dp"
-                    android:layout_alignParentRight="true"
-                    app:civ_border_color="@color/white"/>
-
-            </RelativeLayout>
-
-
-
-        </androidx.appcompat.widget.Toolbar>
-
-    </com.google.android.material.appbar.AppBarLayout>
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="2.6"
+        android:layout_weight="2"
         android:layout_marginHorizontal="5dp"
         android:orientation="vertical"
         android:layout_marginTop="10dp"
@@ -95,22 +30,21 @@
             android:layout_height="wrap_content"
             android:text="Registration"
             android:gravity="center"
-            android:textSize="23sp"
+            android:textSize="20sp"
             android:textColor="@color/lightgray"
             android:textStyle="bold"/>
 
         <View
             android:id="@+id/divider"
             android:layout_width="match_parent"
-            android:layout_height="2dp"
-            android:layout_marginTop="8dp"
+            android:layout_height="1dp"
             android:layout_marginHorizontal="15dp"
             android:background="@color/lightgray" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginTop="10sp"
+            android:weightSum="3"
             android:orientation="horizontal">
 
             <LinearLayout
@@ -124,7 +58,7 @@
                     android:layout_height="wrap_content"
                     android:text="Approved"
                     android:textStyle="bold"
-                    android:textSize="20sp"
+                    android:textSize="17sp"
                     android:textColor="@color/lightgray"
                     android:gravity="center"/>
 
@@ -133,8 +67,8 @@
                 <View
                     android:id="@+id/divider1"
                     android:layout_width="match_parent"
-                    android:layout_height="2dp"
-                    android:layout_marginTop="8dp"
+                    android:layout_height="1dp"
+                    android:layout_marginTop="3dp"
                     android:layout_marginHorizontal="15dp"
                     android:background="@color/lightgray" />
 
@@ -144,17 +78,17 @@
                     android:text="2085"
 
                     android:id="@+id/approved"
-                    android:textSize="30sp"
+                    android:textSize="15sp"
                     android:textColor="@color/lightgray"
                     android:textStyle="bold"
                     android:gravity="center"
-                    android:layout_marginTop="10dp"/>
+                    android:layout_marginTop="5dp"/>
 
                 <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="center"
-                    android:layout_marginTop="15dp"
+                    android:layout_marginTop="5dp"
                     >
 
 
@@ -193,7 +127,7 @@
                     android:layout_height="wrap_content"
                     android:text="Pending"
                     android:textStyle="bold"
-                    android:textSize="20sp"
+                    android:textSize="17sp"
                     android:textColor="@color/lightgray"
                     android:gravity="center"/>
 
@@ -202,8 +136,8 @@
                 <View
                     android:id="@+id/divider2"
                     android:layout_width="match_parent"
-                    android:layout_height="2dp"
-                    android:layout_marginTop="8dp"
+                    android:layout_height="1dp"
+                    android:layout_marginTop="3dp"
                     android:layout_marginHorizontal="15dp"
                     android:background="@color/lightgray" />
 
@@ -212,18 +146,18 @@
                     android:layout_height="wrap_content"
                     android:text="2085"
                     android:id="@+id/pending"
-                    android:textSize="30sp"
+                    android:textSize="15sp"
                     android:textColor="@color/lightgray"
                     android:textStyle="bold"
                     android:gravity="center"
-                    android:layout_marginTop="10dp"/>
+                    android:layout_marginTop="5dp"/>
 
                 <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="center"
 
-                    android:layout_marginTop="15dp"
+                    android:layout_marginTop="5dp"
                     >
 
 
@@ -237,11 +171,11 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="50dp"
-                        android:text = "13.30%"
+                        android:layout_toEndOf="@id/arrow_drop_up_2"
                         android:gravity="center"
-                        android:textSize="15sp"
+                        android:text="13.30%"
                         android:textColor="@color/green"
-                        android:layout_toEndOf="@id/arrow_drop_up_2"/>
+                        android:textSize="15sp" />
 
 
 
@@ -264,7 +198,7 @@
                     android:layout_height="wrap_content"
                     android:text="Blocked"
                     android:textStyle="bold"
-                    android:textSize="20sp"
+                    android:textSize="17sp"
                     android:textColor="@color/lightgray"
                     android:gravity="center"/>
 
@@ -273,8 +207,8 @@
                 <View
                     android:id="@+id/divider3"
                     android:layout_width="match_parent"
-                    android:layout_height="2dp"
-                    android:layout_marginTop="8dp"
+                    android:layout_height="1dp"
+                    android:layout_marginTop="3dp"
                     android:layout_marginHorizontal="15dp"
                     android:background="@color/lightgray" />
 
@@ -282,19 +216,19 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="2085"
-                    android:textSize="30sp"
+                    android:textSize="15sp"
 
                     android:id="@+id/blocked"
                     android:textColor="@color/lightgray"
                     android:textStyle="bold"
                     android:gravity="center"
-                    android:layout_marginTop="10dp"/>
+                    android:layout_marginTop="5dp"/>
 
                 <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="center"
-                    android:layout_marginTop="15dp"
+                    android:layout_marginTop="5dp"
                     >
 
 
@@ -328,12 +262,12 @@
     <Space
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="0.3"/>
+        android:layout_weight="0.2"/>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="5.5"
+        android:layout_weight="6.8"
         android:layout_marginHorizontal="5dp"
         android:weightSum="5"
         android:orientation="vertical"
@@ -346,8 +280,9 @@
             android:layout_weight=".4"
             android:text="Drivers / Riders"
             android:textStyle="bold"
+            android:gravity="center"
             android:layout_marginHorizontal="30sp"
-            android:textSize="23sp"
+            android:textSize="20sp"
             android:textColor="@color/lightgray"/>
 
         <View
