--- a/app/src/main/res/layout/activity_discount.xml
+++ b/app/src/main/res/layout/activity_discount.xml
@@ -208,7 +208,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Percentage off"
+                        android:text="Amount off"
                         android:textColor="@color/lightgray"
                         android:textSize="17sp"
                         android:textStyle="bold"/>
@@ -229,7 +229,7 @@
                     android:layout_height="0dp"
                     android:layout_weight="0.7"
                     android:maxLines="1"
-                    android:hint="e.g 20 "
+                    android:hint="e.g 20"
 
                     android:id="@+id/etPercentage"
                     android:paddingHorizontal="8dp"
