--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -441,7 +441,12 @@ android:paddingStart="5dp"
             </LinearLayout>
     </LinearLayout>
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="0.1"/>
     <LinearLayout
+        android:layout_margin="5dp"
         android:layout_width="match_parent"
         android:layout_height="100dp"
         android:orientation="vertical"
@@ -472,7 +477,7 @@ android:paddingStart="5dp"
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:layout_marginHorizontal="50dp"
-            android:layout_marginTop="5dp"
+            android:layout_marginTop="10dp"
             android:text= "Go to Dis./promo Dashboard"
 
             android:id="@+id/addpromo"
